--- a/prepros.cfg
+++ b/prepros.cfg
@@ -51,15 +51,28 @@
           "parents": [],
           "type": "less"
         },
+        "f3e8cdb1": {
+          "id": "f3e8cdb1",
+          "path": "Assets/Images/logo.png",
+          "output": "Assets/Images/logo.png",
+          "name": "logo.png",
+          "category": "IMAGE",
+          "size": 35760,
+          "type": "png",
+          "initialSize": 35760,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
         "158ae0cd": {
           "id": "158ae0cd",
           "path": "Assets/Images/background.jpg",
           "output": "Assets/Images/background.jpg",
           "name": "background.jpg",
           "category": "IMAGE",
-          "size": 54560,
+          "size": 146465,
           "type": "jpg",
-          "initialSize": 54560,
+          "initialSize": 146465,
           "optimized": false,
           "height": 0,
           "width": 0
@@ -70,12 +83,28 @@
           "output": "Assets/Images/background@2x.jpg",
           "name": "background@2x.jpg",
           "category": "IMAGE",
-          "size": 151286,
+          "size": 286676,
           "type": "jpg",
-          "initialSize": 151286,
+          "initialSize": 286676,
           "optimized": false,
           "height": 0,
           "width": 0
+        },
+        "7c783f35": {
+          "id": "7c783f35",
+          "path": "Assets/Scripts/hallmarkcheckin.js",
+          "output": "Assets/Scripts/hallmarkcheckin-dist.js",
+          "name": "hallmarkcheckin.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
         }
       },
       "deploymentHistory": {},
